--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
       </div>
 
       <nav class="primary" role="navigation" aria-label="Primary">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="how.html">How It Works</a>
         <a href="invite.html" class="cta-top">Invite</a>
@@ -152,7 +152,7 @@
   <footer>
     <div class="container">
       <div>© <span id="year"></span> ReadersConnect — Private, trusted readers</div>
-      <div>Email: <a href="mailto:reviews@readersconnect.example">reviews@readersconnect.example</a></div>
+      <div>Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
