--- a/how.html
+++ b/how.html
@@ -120,7 +120,7 @@
       </div>
 
      <nav class="primary" aria-label="Top links" style="padding-right:24px">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">Our Story</a>
         <a href="how.html" style="color:var(--ink);">How it Works</a>
         <a href="invite.html">Invite</a>
@@ -335,7 +335,7 @@
   <footer class="site" style="padding:36px 24px;text-align:center;color:var(--muted)">
     <div class="container">
       <div style="margin-bottom:8px">© <span id="year"></span> ReadersConnect — Private readers only</div>
-      <div>Email: <a href="mailto:reviews@readersconnect.example">reviews@readersconnect.example</a></div>
+      <div>Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
