--- a/invite.html
+++ b/invite.html
@@ -132,7 +132,7 @@
       </div>
 
       <nav class="primary" role="navigation" aria-label="Primary">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="how.html">How It Works</a>
         <a href="invite.html" class="cta-top">Invite</a>
@@ -255,7 +255,7 @@
 
           <div class="form-foot">
             <button class="btn-primary" type="submit" id="sendBtn">Send Request</button>
-            <a class="btn-ghost" href="mailto:reviews@readersconnect.example">Or email us directly</a>
+            <a class="btn-ghost" href="sunriseplatoon@gmail.com">Or email us directly</a>
           </div>
         </form>
       </div>
@@ -272,7 +272,7 @@
   <footer>
     <div class="container">
       <div style="margin-bottom:6px">© <span id="year"></span> ReadersConnect — Invite-only readers</div>
-      <div style="color:var(--muted)">Email: <a href="mailto:reviews@readersconnect.example">reviews@readersconnect.example</a></div>
+      <div style="color:var(--muted)">Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
