--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
         </div>
       </div>
       <nav class="primary" aria-label="Top links" style="padding-right:24px">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">Our Story</a>
         <a href="how.html" style="color:var(--ink);">How it Works</a>
         <a href="invite.html">Invite</a>
@@ -161,7 +161,7 @@
       </div>
       <aside class="profile-card" id="profileCard" aria-hidden="true">
         <div style="height:260px;overflow:hidden;border-radius:10px">
-          <img class="profile-photo" src="https://images.unsplash.com/photo-1519340333755-6c8b0a1b7f2b?q=80&w=1400&auto=format&fit=crop" alt="Cozy reading corner">
+          <img class="profile-photo" src="Founder.jpeg" alt="Cozy reading corner">
         </div>
         <div style="margin-top:12px">
           <div style="font-weight:700;font-size:1.05rem">Founded by Samuel</div>
@@ -216,7 +216,7 @@
         </div>
         <div class="voice-card">
           <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?q=80&w=400&auto=format&fit=crop" alt="Reader Sam">
-          <strong>Sam, 40</strong>
+          <strong>Maria, 26</strong>
           <p>"ReadersConnect makes me feel part of a family that truly values books and authors."</p>
         </div>
         <div class="voice-card">
@@ -266,7 +266,7 @@
   <footer>
     <div class="container" style="text-align:center;color:var(--muted)">
       <div style="margin-bottom:6px">© <span id="year"></span> ReadersConnect — Private readers only</div>
-      <div>Email: <a href="mailto:reviews@readersconnect.example">reviews@readersconnect.example</a></div>
+      <div>Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
