--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </div>
 
       <nav class="primary" aria-label="Top links" style="padding-right:24px">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">Our Story</a>
         <a href="how.html" style="color:var(--ink);">How it Works</a>
         <a href="invite.html">Invite</a>
@@ -321,7 +321,7 @@
   <footer class="site">
     <div class="container">
       <div style="margin-bottom:6px">© <span id="year"></span> ReadersConnect — Private readers only</div>
-      <div style="color:var(--muted)">Email: <a href="mailto:reviews@readersconnect.example">reviews@readersconnect.example</a></div>
+      <div style="color:var(--muted)">Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
