--- a/about.html
+++ b/about.html
@@ -266,7 +266,7 @@
   <footer>
     <div class="container" style="text-align:center;color:var(--muted)">
       <div style="margin-bottom:6px">© <span id="year"></span> ReadersConnect — Private readers only</div>
-      <div>Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
+      <div>Email: <a href="mailto:sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
