--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
   <footer>
     <div class="container">
       <div>© <span id="year"></span> ReadersConnect — Private, trusted readers</div>
-      <div>Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
+      <div>Email: <a href="mailto:sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
