--- a/how.html
+++ b/how.html
@@ -335,7 +335,7 @@
   <footer class="site" style="padding:36px 24px;text-align:center;color:var(--muted)">
     <div class="container">
       <div style="margin-bottom:8px">© <span id="year"></span> ReadersConnect — Private readers only</div>
-      <div>Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
+      <div>Email: <a href="mailto:sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
