--- a/invite.html
+++ b/invite.html
@@ -255,7 +255,7 @@
 
           <div class="form-foot">
             <button class="btn-primary" type="submit" id="sendBtn">Send Request</button>
-            <a class="btn-ghost" href="sunriseplatoon@gmail.com">Or email us directly</a>
+            <a class="btn-ghost" href="mailto:sunriseplatoon@gmail.com">Or email us directly</a>
           </div>
         </form>
       </div>
@@ -272,7 +272,7 @@
   <footer>
     <div class="container">
       <div style="margin-bottom:6px">© <span id="year"></span> ReadersConnect — Invite-only readers</div>
-      <div style="color:var(--muted)">Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
+      <div style="color:var(--muted)">Email: <a href="mailto:sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
