--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
           <div class="form-cta">
             <button type="submit" class="btn-primary" id="sendBtn">Send Invitation</button>
-            <a class="btn-ghost" href="mailto:reviews@readersconnect.example">Or email us directly</a>
+            <a class="btn-ghost" href="mailto:sunriseplatoon@gmail.com">Or email us directly</a>
           </div>
         </form>
 
@@ -321,7 +321,7 @@
   <footer class="site">
     <div class="container">
       <div style="margin-bottom:6px">© <span id="year"></span> ReadersConnect — Private readers only</div>
-      <div style="color:var(--muted)">Email: <a href="sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
+      <div style="color:var(--muted)">Email: <a href="mailto:sunriseplatoon@gmail.com">sunriseplatoon@gmail.com</a></div>
     </div>
   </footer>
 
